<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dev.dediren</groupId>
  <artifactId>dediren</artifactId>
  <version>0.19.0</version>
  <packaging>pom</packaging>

  <modules>
    <module>apps/cli</module>
    <module>modules/archimate</module>
    <module>modules/contracts</module>
    <module>modules/core</module>
    <module>modules/schema-cache</module>
    <module>modules/uml</module>
    <module>modules/plugins/archimate-oef-export</module>
    <module>modules/plugins/elk-layout</module>
    <module>modules/plugins/generic-graph</module>
    <module>modules/plugins/svg-render</module>
    <module>modules/plugins/uml-xmi-export</module>
    <module>test-support</module>
    <module>testbeds/plugin-runtime</module>
    <module>tools/dist</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <argLine>-Dfile.encoding=UTF-8</argLine>
    <assertj.version>3.27.7</assertj.version>
    <eclipse-elk.version>0.11.0</eclipse-elk.version>
    <guava.version>33.6.0-jre</guava.version>
    <jackson.version>2.22.0</jackson.version>
    <json-schema-validator.version>3.0.3</json-schema-validator.version>
    <junit.version>6.1.0</junit.version>
    <picocli.version>4.7.7</picocli.version>
    <xmlunit.version>2.12.0</xmlunit.version>
    <xtext-xbase.version>2.43.0</xtext-xbase.version>
    <appassembler-maven-plugin.version>2.1.0</appassembler-maven-plugin.version>
    <cyclonedx-maven-plugin.version>2.9.1</cyclonedx-maven-plugin.version>
    <dependency-check-maven.version>12.2.2</dependency-check-maven.version>
    <exec-maven-plugin.version>3.6.3</exec-maven-plugin.version>
    <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>3.5.6</maven-surefire-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.networknt</groupId>
        <artifactId>json-schema-validator</artifactId>
        <version>${json-schema-validator.version}</version>
      </dependency>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli</artifactId>
        <version>${picocli.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.elk</groupId>
        <artifactId>org.eclipse.elk.alg.layered</artifactId>
        <version>${eclipse-elk.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.elk</groupId>
        <artifactId>org.eclipse.elk.core</artifactId>
        <version>${eclipse-elk.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.elk</groupId>
        <artifactId>org.eclipse.elk.graph</artifactId>
        <version>${eclipse-elk.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.xtext</groupId>
        <artifactId>org.eclipse.xtext.xbase.lib</artifactId>
        <version>${xtext-xbase.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
      </dependency>
      <dependency>
        <groupId>org.xmlunit</groupId>
        <artifactId>xmlunit-core</artifactId>
        <version>${xmlunit.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <release>${maven.compiler.release}</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
            <useModulePath>false</useModulePath>
            <systemPropertyVariables>
              <dediren.version>${project.version}</dediren.version>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>appassembler-maven-plugin</artifactId>
          <version>${appassembler-maven-plugin.version}</version>
          <configuration>
            <assembleDirectory>${project.build.directory}/appassembler</assembleDirectory>
            <repositoryLayout>flat</repositoryLayout>
            <repositoryName>lib</repositoryName>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${exec-maven-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>sbom</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.cyclonedx</groupId>
            <artifactId>cyclonedx-maven-plugin</artifactId>
            <version>${cyclonedx-maven-plugin.version}</version>
            <configuration>
              <includeTestScope>false</includeTestScope>
              <outputFormat>all</outputFormat>
              <outputName>bom</outputName>
              <schemaVersion>1.6</schemaVersion>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>security-sca</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.owasp</groupId>
            <artifactId>dependency-check-maven</artifactId>
            <version>${dependency-check-maven.version}</version>
            <configuration>
              <dataDirectory>${maven.multiModuleProjectDirectory}/.cache/dependency-check</dataDirectory>
              <failBuildOnCVSS>7.0</failBuildOnCVSS>
              <formats>
                <format>HTML</format>
                <format>JSON</format>
              </formats>
              <nvdApiKeyEnvironmentVariable>NVD_API_KEY</nvdApiKeyEnvironmentVariable>
              <outputDirectory>${project.build.directory}/dependency-check</outputDirectory>
              <skipTestScope>true</skipTestScope>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
